manifest/objects/Apttus__TemplateDatasourceFilter__c.object
<CustomObject>
    <description>Represents a datasource filter associated with a template</description>
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The business object which provides the context for the filter</description>
        <formula>TEXT(Apttus__FilterId__r.Apttus__BusinessObject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
        <label>Business Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FilterId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the search filter</description>
        <inlineHelpText>ID of the search filter</inlineHelpText>
        <label>Search Filter</label>
        <referenceTo>Apttus__SearchFilter__c</referenceTo>
        <relationshipName>Datasource_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <description>ID of the associated template</description>
        <inlineHelpText>ID of the associated template</inlineHelpText>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Template Datasource Filters</relationshipLabel>
        <relationshipName>TemplateDatasourceFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Datasource Filter</label>
    <nameField>
        <displayFormat>DF-{000000}</displayFormat>
        <label>Filter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Datasource Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>